<resources>
    <string name="app_name">AL HUFFAZ</string>
    <string name="action_settings">Settings</string>
    <string name="EmailAddress">Email Address</string>
    <string name="Password">Password</string>
    <string name="Mobile">Mobile Number</string>
    <string name="LastName">Last Name</string>
    <string name="FirstName">First Name</string>
    <string name="Logout">Logout</string>
    <string name="passwordCaps">Password</string>
    <string name="email_addressCaps">Email Address</string>
    <string name="log_inCaps">LOGIN</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="join_us_today">Join us today!</string>
    <string name="already_registered_log_in_here">Already Registered? Log In here</string>
    <string name="LogoDesc">Al-Huffaz Manaement Official Logo</string>
    <string name="Register">REGISTER</string>
    <string name="RegPage">New User Registration</string>
    <string name="input_error_invalidEmailAddress">Sorry! Your email is Invalid. Please try again.</string>
    <string name="input_error_emptyEmailAddress">Please enter your email address.</string>
    <string name="input_error_emptyPassword">Please enter your password.</string>
    <string name="input_error_invalidPassword">Your password should have more than 6 character.</string>
    <string name="input_error_emptyFirstName">Please fill in your First name.</string>
    <string name="input_error_emptyLastName">Please enter your Last name.</string>
    <string name="input_error_emptyMobileNumb">Please enter you Mobile Number.</string>
    <string name="input_error_invalidMobileNumb">Sorry! Your Mobile Number is invalid. Please try again.</string>
    <string name="AboutUs">Al-Huffaz Management offers Iqra\' and Al-Quran Recitation Classes at your private home or suitable place of your own choosing. Not only that, we also provides services to lead prayers, Islamic performance, giving Religious talks and etc.</string>
    <string name="QuranIqraClass"><![CDATA[Quran & Iqra Class]]></string>
    <string name="ClientName">Client Name</string>
    <string name="ChoosePackage">Mengaji Packages</string>
    <string name="HomeAddress">Home Address</string>
    <string name="ChooseTeacher">Preferred Teacher</string>
    <string name="ChooseDay">Preferred Day</string>
    <string name="ChooseTime">Preferred Time</string>
    <string name="preferredtime">Time ex: "8AM - 9AM / 8PM - 9PM"</string>
    <string name="religious_packages">Religious Packages</string>

    <array name="MengajiPackages">
        <item>-- Please select --</item>
        <item>Al-Quran Class</item>
        <item>Al-Quran Memorization Class</item>
        <item>Iqra Class</item>
        <item>Al-Quran and Iqra Class</item>
        <item>Tarannum Bil Quran Class</item>
    </array>

    <array name="PreferredTeacher">
        <item>-- Please select --</item>
        <item>Ustaz/Male</item>
        <item>Ustazah/Female</item>
    </array>

    <array name="PreferredDay">
        <item>-- Please select --</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </array>

    <array name="ReligiuosPackages">
        <item>-- Please select --</item>
        <item>Arrabic Language Class</item>
        <item>SSSRU Tution Class</item>
        <item>Leading Prayers</item>
        <item>Religious Art - Bedikir</item>
        <item>Religious Art - Tausyeh</item>
    </array>

</resources>
