<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/RegPage" />

    <!-- Enter your Full name -->
        <EditText
            android:id="@+id/regTxtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/FirstName"
            android:ems="10"
            android:inputType="text"
            android:layout_marginTop="15dp"
            android:textSize="25sp"/>

    <!-- Enter your User name -->
        <EditText
            android:id="@+id/regTxtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LastName"
            android:ems="10"
            android:inputType="text"
            android:layout_marginTop="15dp"
            android:textSize="25sp"/>


    <!-- Enter your e-mail address -->
        <EditText
            android:id="@+id/regTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EmailAddress"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginTop="15dp"
            android:textSize="25sp"/>

    <!-- Enter your password -->
        <EditText
            android:id="@+id/regTxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            android:textSize="25sp"/>

    <!-- Enter your password (Confirmation) -->
        <EditText
            android:id="@+id/regTxtMobNumb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Mobile"
            android:ems="10"
            android:inputType="number"
            android:layout_marginTop="15dp"
            android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/Register"
        android:textSize="22sp"
        android:textColor="#ffff"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_cylinder"/>

    <!-- Code for LogIn TextView (Starts) -->
    <TextView
        android:id="@+id/signInText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:text="@string/already_registered_log_in_here" />
    <!-- Code for LogIn TextView (end) -->

</LinearLayout>