<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LoginActivity">

    <!-- Code for Al Huffaz log image (Starts) -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/logologin"
        android:contentDescription="@string/LogoDesc" />
    <!-- Code for Al Huffaz log image (End) -->


    <!-- Code for Email address field (Starts) -->
        <EditText
            android:id="@+id/logTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_addressCaps"
            android:ems="10"
            android:textStyle="bold"
            android:textColor="#4a4a4a"
            android:inputType="textEmailAddress"
            android:layout_marginTop="15dp"
            android:textSize="20sp"/>
    <!-- Code for Email address field (End) -->

    <!-- Code for Password field (Starts) -->
        <EditText
            android:id="@+id/logTxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordCaps"
            android:ems="10"
            android:textStyle="bold"
            android:textColor="#4a4a4a"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            android:textSize="20sp"/>

    <!-- Code for Password field (End) -->

    <!-- Code for Login button (Starts) -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/log_inCaps"
        android:textSize="22sp"
        android:textColor="#ffff"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_cylinder"/>
    <!-- Code for Login button (End) -->

    <!-- Code for Forgot PW TextView (Starts) -->
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_your_password" />
    <!-- Code for Forgot PW TextView (end) -->

    <!-- Code for Register TextView (Starts) -->
    <TextView
        android:id="@+id/registerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:text="@string/join_us_today" />
    <!-- Code for Register TextView (end) -->

    <!-- Code for Register button (Starts) -->
    <Button
        android:id="@+id/btn_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/Register"
        android:textSize="22sp"
        android:textColor="#24A0ED"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_cylinder_transparent"/>
    <!-- Code for Register button (End) -->

</LinearLayout>