<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MengajiActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/txtViewMengaji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="135dp"
        android:text="@string/QuranIqraClass"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewClientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="167dp"
        android:text="@string/ClientName"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewMengaji" />

    <TextView
        android:id="@+id/txtUpdate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="55dp"
        android:text="Book your Mengaji Class"
        android:textAlignment="center"
        android:textColor="@color/colorDarkBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewClientName" />


    <TextView
        android:id="@+id/txtViewPackage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="8dp"
        android:text="@string/religious_packages"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinnerPackage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtUpdate" />

    <Spinner
        android:id="@+id/spinnerPackage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:entries="@array/MengajiPackages"
        app:layout_constraintBottom_toTopOf="@+id/txtViewTeacher"
        app:layout_constraintStart_toStartOf="@+id/txtViewPackage" />

    <TextView
        android:id="@+id/txtViewTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ChooseTeacher"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinnerTeacher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerTeacher"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:entries="@array/PreferredTeacher"
        app:layout_constraintBottom_toTopOf="@+id/txtViewDay"
        app:layout_constraintStart_toStartOf="@+id/txtViewTeacher" />

    <TextView
        android:id="@+id/txtViewDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="270dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ChooseDay"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinnerDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerDay"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:entries="@array/PreferredDay"
        app:layout_constraintBottom_toTopOf="@+id/preferredTime"
        app:layout_constraintStart_toStartOf="@+id/txtViewDay" />

    <EditText
        android:id="@+id/preferredTime"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/preferredtime"
        android:textColor="#4a4a4a"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EventAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EventAddress"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/HomeAddress"
        android:textColor="#4a4a4a"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnBookMengaji"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBookMengaji"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_cylinder"
        android:text="BOOK NOW"
        android:textColor="#ffff"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Code for Email address field (End) -->
</androidx.constraintlayout.widget.ConstraintLayout>